test/types/records/init/generic/mismatch.good
mismatch.chpl:16: error: type mismatch between declared type of 'a' and initialization expression
